# rabbitmq-mcp-task-queue

./: CHANGELOG.md  PUBLISHING.md  README.md  pyproject.toml
example/: README.md  docker-compose.yml  mcp_client.py  mcp_server.py  pyproject.toml  redis_task_store.py
