[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-task-rmq-queue"
version = "0.1.0"
description = "RabbitMQ-based TaskMessageQueue implementation for MCP (Model Context Protocol)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["mcp", "rabbitmq", "task-queue", "model-context-protocol", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "mcp>=1.3.0",
    "pika>=1.3.0",
    "anyio>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mcp-task-rmq-queue"
Repository = "https://github.com/yourusername/mcp-task-rmq-queue"
Issues = "https://github.com/yourusername/mcp-task-rmq-queue/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]
